test: re-enable some integration tests
* test: fix integration tests

* 26 tests passing

* enables cross component and workflows tests for a total of 47

* re-enable integration tests

* formatting

* enable EventingTestkitDestinationIntegrationTest and splitting ci job into one per test

* sbt javafmtAll

* enable EndpointsIntegrationTest

* fix ci