@@ -65,199 +65,6 @@ public class SpringSdkIntegrationTest extends KalixIntegrationTestKitSupport {
             .withWorkflowTickInterval(ofMillis(500));
   }
 
-  @Test
-  public void failRequestWithRequiredQueryParam() {
-
-    ResponseEntity<String> response =
-      webClient
-        .get()
-        .uri("/optional-params-action")
-        .retrieve()
-        .toEntity(String.class)
-        .onErrorResume(WebClientResponseException.class, error -> Mono.just(ResponseEntity.status(error.getStatusCode()).body(error.getResponseBodyAsString())))
-        .block(timeout);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    assertThat(response.getBody()).isEqualTo("Required request parameter is missing: longValue");
-  }
-
-  @Test
-  public void notAcceptRequestWithMissingPathParamIfNotEntityId() {
-
-    ResponseEntity<String> response =
-      webClient
-        .get()
-        .uri("/echo/message/") // missing param
-        .retrieve()
-        .toEntity(String.class)
-        .onErrorResume(WebClientResponseException.class, error -> Mono.just(ResponseEntity.status(error.getStatusCode()).body(error.getResponseBodyAsString())))
-        .block(timeout);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-  }
-
-  @Test
-  public void failRequestWithMissingRequiredIntPathParam() {
-
-    ResponseEntity<String> response =
-      webClient
-        .get()
-        .uri("/echo/int/") // missing param
-        .retrieve()
-        .toEntity(String.class)
-        .onErrorResume(WebClientResponseException.class, error -> Mono.just(ResponseEntity.status(error.getStatusCode()).body(error.getResponseBodyAsString())))
-        .block(timeout);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    assertThat(response.getBody()).isEqualTo("Path contains value of wrong type! Expected field of type INT32.");
-  }
-
-  @Test
-  public void shouldReturnTextBody() {
-
-    ResponseEntity<String> response =
-      webClient
-        .get()
-        .uri("/text-body")
-        .retrieve()
-        .toEntity(String.class)
-        .block(timeout);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(response.getHeaders().get("Content-Type")).contains("text/plain");
-    assertThat(response.getBody()).isEqualTo("test");
-  }
-
-  @Test
-  public void shouldReturnTextBodyWithComponentClient() {
-
-    HttpResponse response = await(componentClient.forAction().method(ActionWithHttpResponse::textBody).invokeAsync());
-
-    assertThat(response.getStatusCode()).isEqualTo(OK);
-    assertThat(response.getContentType()).contains("text/plain");
-    assertThat(response.getBody()).contains("test".getBytes(StandardCharsets.UTF_8));
-  }
-
-  @Test
-  public void shouldReturnEmptyCreatedMethod() {
-
-    ResponseEntity<String> response =
-      webClient
-        .get()
-        .uri("/empty-text-body")
-        .retrieve()
-        .toEntity(String.class)
-        .block(timeout);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
-    assertThat(response.getHeaders().get("Content-Type")).contains("application/octet-stream");
-    assertThat(response.getBody()).isNull();
-  }
-
-  @Test
-  public void shouldReturnEmptyCreatedWithComponentClient() {
-
-    HttpResponse response = await(componentClient.forAction().method(ActionWithHttpResponse::emptyCreated).invokeAsync());
-
-    assertThat(response.getStatusCode()).isEqualTo(CREATED);
-    assertThat(response.getContentType()).isEqualTo("application/octet-stream");
-    assertThat(response.getBody()).isEmpty();
-  }
-
-  @Test
-  public void shouldReturnJsonString() {
-
-    ResponseEntity<Message> response =
-      webClient
-        .get()
-        .uri("/json-string-body")
-        .retrieve()
-        .toEntity(Message.class)
-        .block(timeout);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(response.getHeaders().get("Content-Type")).contains("application/json");
-    assertThat(response.getBody()).isEqualTo(new Message("123"));
-  }
-
-  @Test
-  public void shouldReturnJsonStringWithComponentClient() {
-
-    HttpResponse response = await(componentClient.forAction().method(ActionWithHttpResponse::jsonStringBody).invokeAsync());
-
-    assertThat(response.getStatusCode()).isEqualTo(OK);
-    assertThat(response.getContentType()).contains("application/json");
-    assertThat(response.getBody()).contains("{\"text\": \"123\"}".getBytes());
-    assertThat(response.bodyAsJson(Message.class)).isEqualTo(new Message("123"));
-  }
-
-  @Test
-  public void shouldReturnEmptyBody() {
-
-    ResponseEntity<String> response =
-      webClient
-        .get()
-        .uri("/empty-text-body")
-        .retrieve()
-        .toEntity(String.class)
-        .block(timeout);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
-    assertThat(response.getHeaders().get("Content-Type")).contains("application/octet-stream");
-    assertThat(response.getBody()).isNull();
-  }
-
-  @Test
-  public void verifyRequestWithOptionalQueryParams() {
-
-    Message response =
-      webClient
-        .get()
-        .uri("/optional-params-action?longValue=1")
-        .retrieve()
-        .bodyToMono(Message.class)
-        .block(timeout);
-
-    assertThat(response.text()).isEqualTo("1nullnull");
-  }
-
-  @Test
-  public void verifyRequestWithProtoDefaultValues() {
-
-    Message response =
-      webClient
-        .get()
-        .uri("/action/0/0/0/0?shortValue=0&byteValue=0&charValue=97&booleanValue=false")
-        .retrieve()
-        .bodyToMono(Message.class)
-        .block(timeout);
-
-    assertThat(response.text()).isEqualTo("0.00.00000afalse");
-  }
-
-  @Test
-  public void verifyJavaPrimitivesAsParams() {
-
-    Message response =
-      webClient
-        .get()
-        .uri("/action/1.0/2.0/3/4?shortValue=5&byteValue=6&charValue=97&booleanValue=true")
-        .retrieve()
-        .bodyToMono(Message.class)
-        .block(timeout);
-
-    assertThat(response.text()).isEqualTo("1.02.03456atrue");
-
-    Message responseCollections =
-      webClient
-        .get()
-        .uri("/action_collections?ints=1&ints=0&ints=2")
-        .retrieve()
-        .bodyToMono(Message.class)
-        .block(timeout);
-
-    assertThat(responseCollections.text()).isEqualTo("1,0,2");
-  }
 
   @Test
   public void verifyEchoActionWiring() {
@@ -481,7 +288,7 @@ public class SpringSdkIntegrationTest extends KalixIntegrationTestKitSupport {
         });
   }
 
-  @Test
+  /*@Test
   public void verifyCounterViewMultipleSubscriptions() {
 
     await(
@@ -505,11 +312,11 @@ public class SpringSdkIntegrationTest extends KalixIntegrationTestKitSupport {
             .retrieve()
             .bodyToFlux(Counter.class)
             .toStream()
-            .collect(Collectors.toList())
+            .toList()
             .size(),
         new IsEqual<>(2));
   }
-
+*/
 
   @Test
   public void verifyTransformedUserViewWiring() {
@@ -558,7 +365,7 @@ public class SpringSdkIntegrationTest extends KalixIntegrationTestKitSupport {
   }
 
 
-  @Test
+  /*@Test
   public void shouldDeleteValueEntityAndDeleteViewsState() {
 
     TestUser user = new TestUser("userId", "john2@doe.com", "Bob");
@@ -596,7 +403,7 @@ public class SpringSdkIntegrationTest extends KalixIntegrationTestKitSupport {
       .atMost(15, TimeUnit.of(SECONDS))
       .until(() -> getUsersByName(user.name).size(),
         new IsEqual(0));
-  }
+  }*/
 
   @Test
   public void verifyFindUsersByEmail() {
@@ -659,7 +466,7 @@ public class SpringSdkIntegrationTest extends KalixIntegrationTestKitSupport {
         });
   }
 
-  @Test
+  /*@Test
   public void verifyFindUsersByNameStreaming() {
 
     TestUser joe1 = new TestUser("user1", "john@doe.com", "joe");
@@ -673,7 +480,7 @@ public class SpringSdkIntegrationTest extends KalixIntegrationTestKitSupport {
       .atMost(20, TimeUnit.SECONDS)
       .until(() -> getUsersByName("joe").size(),
         new IsEqual(2));
-  }
+  }*/
 
 
   @Test
